--- a/ekoterm-org-ember/bower.json
+++ b/ekoterm-org-ember/bower.json
@@ -9,7 +9,8 @@
     "ember-qunit-notifications": "0.1.0",
     "jquery": "^1.11.3",
     "loader.js": "^3.5.0",
-    "qunit": "~1.20.0"
+    "qunit": "~1.20.0",
+    "bootstrap": "~3.3.6"
   },
   "resolutions": {
     "ember": "2.2.0"
