--- a/ekoterm-org-ember/package.json
+++ b/ekoterm-org-ember/package.json
@@ -22,6 +22,7 @@
     "broccoli-asset-rev": "^2.2.0",
     "ember-ajax": "0.7.1",
     "ember-bootstrap": "0.5.0",
+    "ember-bootstrap-nav": "0.1.2",
     "ember-cli": "2.2.0-beta.1",
     "ember-cli-app-version": "^1.0.0",
     "ember-cli-babel": "^5.1.5",
